--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,11 @@
       <form (ngSubmit)="login(email.value, password.value)">
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="text" #email class="form-control" id="email" placeholder="Enter email">
+          <input type="text" #email class="form-control" id="login_email" placeholder="Enter email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" #password class="form-control" id="password" placeholder="Password">
+          <input type="password" #password class="form-control" id="login_password" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
