--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,14 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-4 logincontainer">
-      <form (ngSubmit)="login(email.value, password.value)">
+      <form (submit)="login($event)">
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="text" #email class="form-control" id="login_email" placeholder="Enter email">
+          <input type="text" #email class="form-control" [formControl]="emailControl" id="login_email" placeholder="Enter email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" #password class="form-control" id="login_password" placeholder="Password">
+          <input type="password" #password class="form-control" [formControl]="emailControl" id="login_password" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
