--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,14 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-4 registercontainer">
-      <form (ngSubmit)="register(email.value, password.value)">
+      <form (submit)="register($event)">
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="text" #email class="form-control" id="email" placeholder="Enter email">
+          <input type="text" #email class="form-control" [formControl]="emailControl" id="email" placeholder="Enter email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" #password class="form-control" id="password" placeholder="Password">
+          <input type="password" #password class="form-control" [formControl]="passwordControl" id="password" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
       </form>
