--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,8 +1,11 @@
 <app-header></app-header>
 <div>
 <ul>
-<li *ngFor="let task of tasks">
-  {{task}}
-</li>
+
+<li *ngFor="let task of tasks$ | async">
+      {{ task["title"] }} <!-- assuming title is a field in your Task document -->
+    </li>
+
+
 </ul>
 </div>
